guides/kubernetes/configuration/opentelemetry-kube-stack/host-profiler-cilium-network-policy.yaml
# Optional egress policy for the host-profiler collector on Cilium clusters,
# with FQDN-scoped Datadog intake egress.
#
# Mirror of datadog-agent
# cmd/host-profiler/deploy/standalone/helm/cilium-network-policy-values.yaml.
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: opentelemetry-kube-stack-host-profiler-egress
  namespace: opentelemetry-operator-system
specs:
  - description: Egress DNS
    endpointSelector:
      matchLabels:
        app.kubernetes.io/name: opentelemetry-kube-stack-host-profiler-collector
    egress:
      - toPorts:
          - ports:
              - port: "53"
                protocol: UDP
              - port: "53"
                protocol: TCP
            rules:
              dns:
                - matchPattern: "*"
  - description: Egress to Datadog intake
    endpointSelector:
      matchLabels:
        app.kubernetes.io/name: opentelemetry-kube-stack-host-profiler-collector
    egress:
      - toFQDNs:
          - matchPattern: "**.datadoghq.com"
          - matchPattern: "**.datadoghq.eu"
          - matchPattern: "**.ddog-gov.com"
        toPorts:
          - ports:
              - port: "443"
                protocol: TCP
  - description: Egress to kubelet API
    endpointSelector:
      matchLabels:
        app.kubernetes.io/name: opentelemetry-kube-stack-host-profiler-collector
    egress:
      - toPorts:
          - ports:
              - port: "10250"
                protocol: TCP
  - description: Egress to Kubernetes API server
    endpointSelector:
      matchLabels:
        app.kubernetes.io/name: opentelemetry-kube-stack-host-profiler-collector
    egress:
      - toEntities:
          - kube-apiserver
